@@ -32,11 +32,10 @@
 #define _MPBLAS_QD_H_
 
 #include "mplapack_config.h"
-
 #include <qd/qd_real.h>
 
-#include "mplapack_utils_qd.h"
 #include "qd_complex.h"
+#include "mplapack_utils_qd.h"
 
 #if !defined __MPLAPACK_ERRNO__
 #define _MPLAPACK_EXTERN_ extern
