@@ -29,7 +29,7 @@
 #ifndef _MUTILS__FLOAT128_H_
 #define _MUTILS__FLOAT128_H_
 
-% % MPLAPACK_BINARY128 % %
+%%MPLAPACK_BINARY128%%
 
 #if defined ___MPLAPACK__FLOAT128_IS_LONGDOUBLE___
 
