@@ -30,7 +30,7 @@
 #ifndef _MPLAPACK_UTILS__FLOAT64X_H_
 #define _MPLAPACK_UTILS__FLOAT64X_H_
 
-% % MPLAPACK__FLOAT64X___FLOAT80_ % %
+%%MPLAPACK__FLOAT64X___FLOAT80_%%
 
 #ifdef __cplusplus
     extern "C" {
