@@ -1,3 +1,9 @@
+2021/4/18   Nakata Maho <maho@riken.jp> 1.0.0
+            * rename debug to test
+            * BLAS part is rewritten using fable completely automatically.
+            * 653 LAPACK subroutines are rewriteen using fable.
+               * approx. 400 routines are rewritten using fable without modifications.
+
 2021/4/11   Nakata Maho <maho@riken.jp> 0.9.3
             * build fix for CentOS7 (AArch64)
             * Rlamch fixes for win64
